# benchmarks

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: CMakeLists.txt  convert-latin1-utf8.cpp
src/locale-conv/: CMakeLists.txt  latin1-utf8.cpp  locale-conv.h  utf8-latin1.cpp
src/xtea/: CMakeLists.txt  decrypt.cpp  encrypt.cpp  xtea.h
